--- a/pom.xml
+++ b/pom.xml
@@ -103,12 +103,12 @@
       <artifactId>commons-io</artifactId>
       <version>2.6</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/com.googlecode.owasp-java-html-sanitizer/owasp-java-html-sanitizer -->
+    <!-- https://mvnrepository.com/artifact/com.googlecode.owasp-java-html-sanitizer/owasp-java-html-sanitizer
     <dependency>
       <groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
       <artifactId>owasp-java-html-sanitizer</artifactId>
       <version>20200713.1</version>
-    </dependency>
+    </dependency>-->
   </dependencies>
 
   <profiles>
@@ -253,6 +253,12 @@
     <repository>
       <id>owasp-java-html-sanitizer</id>
       <url>https://mvnrepository.com/artifact/com.googlecode.owasp-java-html-sanitizer/owasp-java-html-sanitizer</url>
+    </repository>
+    <repository>
+      <id>prime-repo</id>
+      <name>PrimeFaces Maven Repository</name>
+      <url>http://repository.primefaces.org</url>
+      <layout>default</layout>
     </repository>
   </repositories>
 </project>
